tests/integration/snapshots/test_build_with_dependency_with_compilation_error.stderr.txt
Error: In child:

[ROOT]/contracts/child[LINE]: error: expected `;`, got `a`
   3 |                     let a = 10;
     |                         ^

In parent:

[ROOT]/contracts/parent[LINE]: error: Failed to import: [NOT_FOUND]
   2 |                 import "../gen/child.code.tolk"
     |                        ^^^^^^^^^^^^^^^^^^^^^^^^

Build failed with 2 errors
